fixed z-index on title ofer the zoomed image

--- a/assets/scss/partials/_typography.scss
+++ b/assets/scss/partials/_typography.scss
@@ -408,7 +408,7 @@ a.social-icon:active {
 
   h3 {
     margin-bottom: 55px;
-    z-index: 99999;
+    z-index: 9;
     position: relative;
     margin-top: 4px;
     animation: anim_affluent_sliderPro_category 1000ms linear both;
